fixed gap in daily weather display

--- a/src/components/DailyInfo/dailyInfo.styles.scss
+++ b/src/components/DailyInfo/dailyInfo.styles.scss
@@ -28,6 +28,7 @@
         display: grid;
         grid-template-columns: 2.7rem 2fr 1fr 1fr 1fr;
         grid-column-gap: 0.2rem;
+        row-gap: 0.5rem;
         height: 2.7rem;
     }
     &__sub_block {
@@ -35,6 +36,7 @@
         padding: 0.2rem;
         width: 100%;
         height: 2.7rem;
+        margin-top: 0.2rem;
         min-width: 2.7rem;
         justify-self: center;
         border: 1px solid $color-border;
